--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "Discord-Bot-Maker-Bot",
-  "author": "Robert Borghese",
+  "name": "Bear",
+  "author": "Joseph",
   "main": "bot.js",
   "version": "1.3.0-beta.5",
   "dependencies": {
